--- a/app-Swoosh/app-Swoosh/Base.lproj/Main.storyboard
+++ b/app-Swoosh/app-Swoosh/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--WelcomVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="app_Swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomVC" customModule="app_Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -50,6 +50,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="daw-Mf-NOE" kind="show" id="W7X-yK-w1T"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find a team in your city &amp; dominate the league" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c44-Mg-GIM">
                                 <rect key="frame" x="47.5" y="254.5" width="280" height="46.5"/>
@@ -80,19 +83,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="bgImg" destination="mTh-bV-rZL" id="YgM-1H-Afu"/>
-                        <outlet property="swoosh" destination="K2I-Rt-Wux" id="h5a-MT-wQo"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="VC6-qo-T1h">
             <objects>
-                <viewController id="daw-Mf-NOE" sceneMemberID="viewController">
+                <viewController id="daw-Mf-NOE" customClass="LeagueVC" customModule="app_Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="usL-Kf-Twa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -127,6 +126,9 @@
                                         <state key="normal" title="Mens">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="onMensTapped:" destination="daw-Mf-NOE" eventType="touchUpInside" id="Nvg-Y2-yyb"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wES-Vq-kv4" customClass="BorderButton" customModule="app_Swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="70" width="343" height="50"/>
@@ -138,6 +140,9 @@
                                         <state key="normal" title="Womens">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="onWomensTapped:" destination="daw-Mf-NOE" eventType="touchUpInside" id="EY5-m8-16Q"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2o-YA-KBr" customClass="BorderButton" customModule="app_Swoosh" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="140" width="343" height="50"/>
@@ -149,10 +154,13 @@
                                         <state key="normal" title="Co-ed">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="onCoedTapped:" destination="daw-Mf-NOE" eventType="touchUpInside" id="c1r-Om-L5b"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RfH-cb-e67" customClass="BorderButton" customModule="app_Swoosh" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RfH-cb-e67" customClass="BorderButton" customModule="app_Swoosh" customModuleProvider="target">
                                 <rect key="frame" x="16" y="597" width="343" height="50"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40052816899999999" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
@@ -162,6 +170,20 @@
                                 <state key="normal" title="NEXT">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="onNextTapped:" destination="daw-Mf-NOE" eventType="touchUpInside" id="ngE-8o-vcV"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bL2-Xa-5XT">
+                                <rect key="frame" x="16" y="10" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="7Xf-NM-aRN"/>
+                                    <constraint firstAttribute="width" constant="30" id="abz-9k-MwZ"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="6Tg-5S-gG2" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="YIo-SY-qBA"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -173,24 +195,31 @@
                             <constraint firstItem="DoV-6q-ZQn" firstAttribute="trailing" secondItem="RfH-cb-e67" secondAttribute="trailing" constant="16" id="HcO-E3-yzH"/>
                             <constraint firstItem="gik-QZ-9Rq" firstAttribute="top" secondItem="zxK-f4-unw" secondAttribute="bottom" constant="50" id="LHL-RK-wFd"/>
                             <constraint firstItem="RfH-cb-e67" firstAttribute="leading" secondItem="DoV-6q-ZQn" secondAttribute="leading" constant="16" id="Mrx-s1-aSm"/>
+                            <constraint firstItem="bL2-Xa-5XT" firstAttribute="leading" secondItem="DoV-6q-ZQn" secondAttribute="leading" constant="16" id="Rkk-Cf-3p8"/>
                             <constraint firstItem="zxK-f4-unw" firstAttribute="top" secondItem="DoV-6q-ZQn" secondAttribute="top" constant="20" id="Wi9-iV-qOC"/>
                             <constraint firstItem="zxK-f4-unw" firstAttribute="leading" secondItem="DoV-6q-ZQn" secondAttribute="leading" id="XQw-Xo-Gjq"/>
                             <constraint firstItem="DoV-6q-ZQn" firstAttribute="trailing" secondItem="gik-QZ-9Rq" secondAttribute="trailing" constant="16" id="cJT-LK-dHg"/>
+                            <constraint firstItem="bL2-Xa-5XT" firstAttribute="top" secondItem="usL-Kf-Twa" secondAttribute="top" constant="10" id="hX1-iO-4Ta"/>
                             <constraint firstItem="Lic-jD-M5K" firstAttribute="top" secondItem="usL-Kf-Twa" secondAttribute="top" id="qIk-j2-u6C"/>
                             <constraint firstItem="DoV-6q-ZQn" firstAttribute="bottom" secondItem="RfH-cb-e67" secondAttribute="bottom" constant="20" id="tQG-43-3qb"/>
                             <constraint firstItem="Lic-jD-M5K" firstAttribute="bottom" secondItem="DoV-6q-ZQn" secondAttribute="bottom" id="vZU-uX-ABP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DoV-6q-ZQn"/>
                     </view>
+                    <connections>
+                        <outlet property="nextBtn" destination="RfH-cb-e67" id="Bmm-7z-cAt"/>
+                        <segue destination="R05-ly-I0H" kind="show" identifier="skillVCsegue" id="r2F-Ua-toS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qTW-iV-T6O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="6Tg-5S-gG2" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="897" y="130"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC-->
         <scene sceneID="wld-S0-INg">
             <objects>
-                <viewController id="R05-ly-I0H" sceneMemberID="viewController">
+                <viewController id="R05-ly-I0H" customClass="SkillVC" customModule="app_Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8wc-Ty-eS5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -276,6 +305,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
